--- a/app/views/pages/pedidos.ejs
+++ b/app/views/pages/pedidos.ejs
@@ -68,7 +68,16 @@
                         <li><input type="checkbox" id="cancelado"> <label for="cancelado">Cancelado</label></li>
                     </ul>
                 </details>
-                <button class="button-filtro">Aplicar Filtros</button>
+                <details open>
+                    <summary>Período</summary>
+                    <ul>
+                        <li><input type="checkbox" id="mes"> <label for="mes">Último mês</label></li>
+                        <li><input type="checkbox" id="trimestre"> <label for="trimestre">Últimos 3 meses</label></li>
+                        <li><input type="checkbox" id="ano"> <label for="ano">Último ano</label></li>
+                    </ul>
+                </details>
+                <button class="button-filtro">APLICAR FILTROS</button>
+                <button class="clear-filters">Limpar Filtros</button>
             </aside>
 
             <!-- Lista de Pedidos -->
