--- a/app/public/css/entrar.css
+++ b/app/public/css/entrar.css
@@ -213,14 +213,17 @@ input[type="checkbox"]:checked + .toggle:before {
     text-align: right;
     margin-bottom: 20px;
     text-decoration: none;
-    font-size: 30px;
+    font-size: 15px;
+    font-family: 'Raleway', sans-serif;
   }
   
   .stay-connected {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
-    font-size: 50px;
+    font-size: 35px;
+    font-family: 'Raleway', sans-serif;
+    margin-left: 50px;
   }
   
   input[type="checkbox"] {
